<resources>
    <string name="app_name">UEApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="forgot">Forgot ?</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Register</string>
    <string name="username">Username</string>
    <string name="logout">Log out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="clicktoadd">Click to add Image</string>
    <string name="homeppage">Homepage</string>
    <string name="save">Save</string>
    <string name="noresult">No Result Found</string>
    <string name="alrtno">Alert Now</string>
    <string name="editpro">Change Profile</string>
    <string name="location">Location</string>
    <string name="dept">Department</string>
    <string name="level">Level</string>
    <string name="office">Position in department</string>
    <string name="action_login_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="recent">Recent</string>
    <string name="question">whats you emergency?</string>
    <string name="fpass_text">Enter your email to receive your password reset link</string>
    <string name="dont_have_an">Do not have an account ?</string>
    <string name="already_have_an">Already a Member</string>
    <string name="title_activity_homepage">Map</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="pleasewait">Please wait...</string>
    <string name="send">Send</string>
    <string name="fpass">Forgot password ?</string>
    <string name="nohistory">No recent history</string>
    <string name="call_later">we are trying to validate your position in your department, you will receive a confirmation mail in 24hrs, after which you can log into the App</string>
    <string name="sucessregistext">You position has been Confirmed.\n WellCome to UEApp</string>
    <string name="unconfirmedaccount">Sorry your position in your department has not been verified yet. Please try again later</string>
    <string name="msghint">Briefly describe what is going on</string>
    <string name="typehere">type here</string>
    <string-array name="faculty">
        <item>--- Select your faculty ---</item>
        <item>SAAT</item>
        <item>SMAT</item>
        <item>SOBS</item>
        <item>SOES</item>
        <item>SOPS</item>
        <item>SEET</item>
        <item>SOHT</item>
    </string-array>

    <string-array name="Saat">
        <item>Agricultural Economics (AEC)</item>
        <item>Agricultural Extension (AEX)</item>
        <item>Animal Science &amp; Technology (AST)</item>
        <item>Crop Science &amp; Technology (CST)</item>
        <item>Forestry &amp; Wildlife Technology (FWT)</item>
        <item>Soil Science &amp; Technology (SST)</item>
    </string-array>

    <string-array name="level">
        <item>--- Click to select ---</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <string-array name="Sops">
        <item>Chemistry (ICH)</item>
        <item>Computer Science (CSC)</item>
        <item>Geosciences (GEO)</item>
        <item>Mathematics (MTH)</item>
        <item>Physics (IPH)</item>
        <item>Science Laboratory Technology (SLT)</item>
        <item>Statistics (STA)</item>
    </string-array>

    <string-array name="offices">
        <item> -- Select your Position -- </item>
        <item>Head Of Department (H.O.D)</item>
        <item>Lecturer</item>
        <item>Secretary</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_userprofile">Userprofile</string>
    <string name="historelog">History Log</string>
</resources>
