<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@raw/bg"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ng.schooln.ueapp.views.LoginActivity">


    <ng.schooln.ueapp.utils.TextviewFormat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login_in_short"
        android:layout_above="@+id/login_form"
        android:textSize="20sp"
        android:textColor="@color/header_text"
        android:textAlignment="center"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="200dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/light_text"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/light_text"
                    android:textSize="14sp"
                    android:drawableStart="@drawable/ic_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/light_text"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:drawableStart="@drawable/ic_lock"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:textColorHint="@color/light_text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/forgotbutton"
        android:layout_width="match_parent"
        android:layout_below="@+id/login_form"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/forgot"
        />
    <TextView
        android:id="@+id/al"
        android:layout_width="match_parent"
        android:layout_below="@+id/forgotbutton"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/light_text"
        android:text="@string/dont_have_an"
        />
    <TextView
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_below="@+id/al"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="5dp"
        android:text="@string/action_sign_in"
        />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_marginEnd="5dp"
        android:id="@+id/fab"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_foward"/>
</RelativeLayout>
