<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/bg"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="ng.schooln.ueapp.views.Recoverpassword">
    <ng.schooln.ueapp.utils.TextviewFormat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:id="@+id/header"
        android:text="@string/fpass"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/fpass_text"
        android:id="@+id/fphint"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/light_text"
        android:layout_below="@+id/fphint"
        android:id="@+id/emaillay"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/light_text"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emaillay"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:onClick="rcoverPass"
        android:padding="5dp"
        android:visibility="gone"
        android:id="@+id/recover"
        android:text="@string/send"/>

</RelativeLayout>
